tests/baselines/reference/es6ExportAssignment.errors.txt
tests/cases/compiler/es6ExportAssignment.ts(3,1): error TS1203: Export assignment cannot be used when targeting ECMAScript 6 modules. Consider using 'export default' or another module format instead.


==== tests/cases/compiler/es6ExportAssignment.ts (1 errors) ====
    
    var a = 10;
    export = a;
    ~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript 6 modules. Consider using 'export default' or another module format instead.